# fast_math_project

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
fast_math/: __init__.py  matmul.c
